--- a/less/main.less
+++ b/less/main.less
@@ -353,6 +353,10 @@ section {
     height:75%;
   }
 
+  section .strip .content h1.section-title {
+    font-size: 2.75em;
+  }
+
   .fa-adi-8x {
     font-size: 4em !important;
   }
